# challenge

./: .gitignore  .pdm.toml  README.md  pyproject.toml  requirements.txt
app/: discounts.py  main.py  messages.py  order.py  stock.py  weather.py
tests/: test_discounts.py  test_stock.py  test_weather.py
