[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Esteban Acevedo", email = "esteban.horacio.acevedo@gmail.com"},
]
dependencies = [
    "requests>=2.28.1",
    "pandas>=1.5.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "mypy>=0.990",
]
