[project]
name = "inceptia"
version = "0.1.0"
description = ""
authors = [
    {name = "Esteban Acevedo", email = "esteban.horacio.acevedo@gmail.com"},
]
dependencies = [
    "requests>=2.28.1",
    "pandas>=1.5.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
